// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1 expense 1`] = `
<p>
  Viewing 
  1
   
  expense
   totalling 
  $866.31
</p>
`;

exports[`should render correctly 2 expenses 1`] = `
<p>
  Viewing 
  2
   
  expenses
   totalling 
  $10.00
</p>
`;
